descard BinDeps in build.jl

--- a/deps/Makefile
+++ b/deps/Makefile
@@ -1,4 +1,4 @@
-SRC = ./src/Lbfgsb*/lbfgsb.f ./src/Lbfgsb*/linpack.f ./src/Lbfgsb*/timer.f ./src/Lbfgsb.3.0/blas.f
+SRC = ./Lbfgsb*/lbfgsb.f ./Lbfgsb*/linpack.f ./Lbfgsb*/timer.f ./Lbfgsb*/blas.f
 
 ./usr/liblbfgsbf.so:
 	gfortran -O3 -fPIC -shared $(SRC) -o $(OUTPUTDIR)/liblbfgsbf.so
